--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,18 @@
-align = true
+style = default
 maxColumn = 120
+continuationIndent.callSite = 2
+continuationIndent.defnSite = 2
+align.openParenDefnSite = false
+align.openParenCallSite = false
+danglingParentheses = true
+indentOperator = spray
+project.excludeFilters = [".*\\.sbt"]
+rewrite.rules = [RedundantBraces, RedundantParens, SortModifiers, prefercurlyfors]
+unindentTopLevelOperators = true
+importSelectors = singleLine
+spaces.afterKeywordBeforeParen = true
+lineEndings = unix
+newlines.penalizeSingleSelectMultiArgList = false
+newlines.alwaysBeforeElseAfterCurlyIf = false
+binPack.literalArgumentLists = false
+runner.optimizer.forceConfigStyleMinArgCount = 1
